--- a/blocks/page/index.css
+++ b/blocks/page/index.css
@@ -1,4 +1,4 @@
-@import url('/vendor/normalize.css');
+@import url('../../vendor/normalize.css');
 @import url('../header/header.css');
 @import url('../logo/logo.css');
 @import url('../description/description.css');
