--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,8 @@
 .khan__book-pic {
   height: 620px;
   width: 608px;
-  background-size: cover;
   margin-right: 40px;
   overflow: hidden;
+  object-fit: cover;
+  object-position: 0 0;
 }
