--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,7 +1,8 @@
 .resources__logo {
   width: 270px;
   height: 38px;
-  background-size: cover;
+  object-fit: contain;
+  object-position: center;
 }
 
 .resources__logo:hover {
